# minecraft-symbols

./: CMakeLists.txt
include/minecraft/: AppResourceLoader.h  Core.h  ExternalFileLevelStorageSource.h  FilePathManager.h  FilePickerSettings.h  MinecraftGame.h  ResourcePack.h  SaveTransactionManager.h  ServerCommandOrigin.h  ServerInstance.h  Store.h
include/minecraft/legacy/: Core.h  FilePickerSettings.h  ImageData.h  Keyboard.h  UUID.h
include/minecraft/std/: string_darwin.cpp  string_linux.cpp  string_linux.h
src/: symbols.cpp  symbols_dlsym.cpp  symbols_internal.h
src/minecraft/: App.h  AppPlatform.h  AppResourceLoader.h  Core.h  I18n.h  Keyboard.h  Minecraft.h  MinecraftCommands.h  MinecraftGame.h  ResourcePack.h  ResourcePackStack.h  ServerCommandOrigin.h  ServerInstance.h  V8.h  Xbox.h  symbols.cpp  symbols.h  symbols_dlsym.cpp  symbols_internal.h
src/minecraft/legacy/: App.h  AppPlatform.h  Core.h  Keyboard.h  MinecraftGame.h  SharedConstants.h  Store.h  Xbox.h
src/minecraft/std/: function.h  shared_ptr.h  string_darwin.cpp  string_darwin.h  string_linux.cpp  string_linux.h
symbolless/: Map_1.13.0.15.json  Map_1.13.0.34.json  Map_1.14.1.3.json  Map_1.14.1.5.json
tools/: process_headers.py  symbolless.py
tools/cppheaderparser/: CppHeaderParser.py
